# wallet

./: .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DONOTDO.md  ERGONOMICS.md  FOLLOWUP.md  LICENSE-APACHE  Makefile  OPEN_SOURCE_READINESS.md  PACKAGE_OVERVIEW.md  PLAN.md  README.md  REFACTOR_SUMMARY.md  SECURITY.md  SESSION_FLOW_CLEANUP_PLAN.md  SIMPLIFICATION_AND_UPSTREAM_TASKS.md  SKILL.md  SPEC.md  SPEC_ALIGNMENT.md  build.rs  build_shared.rs  deny.toml  flake.nix  install.sh  package-lock.json  package.json  pget.toml.example  presto.toml.example  purl.toml.example  sgconfig.yml  tempoctl.toml.example  typos.toml
cli/: Cargo.toml  README.md  install
cli/scripts/: e2e.sh
cli/src/: balance_command.rs  cli.rs  config_commands.rs  config_utils.rs  display_utils.rs  errors.rs  exit_codes.rs  hyperlink.rs  init.rs  inspect_command.rs  main.rs  network_commands.rs  output.rs  passkey_commands.rs  payment.rs  request.rs  state.rs  wallet_commands.rs  web_payment.rs
cli/tests/: balance_command_tests.rs  cli_tests.rs  config_command_tests.rs  constraint_tests.rs  integration.rs  method_command_tests.rs  payment_tests.rs  web_payment_tests.rs
cli/tests/common/: mod.rs
crates/sign-release/: Cargo.toml
crates/sign-release/src/: main.rs
crates/tempo-cli/: Cargo.toml  README.md  SKILL.md  build.rs
crates/tempo-cli/src/: installer.rs  launcher.rs
crates/tempo-cli/tests/: integration.rs
crates/tempo-common/: Cargo.toml  README.md
crates/tempo-common/src/: analytics.rs  cli.rs  config.rs  context.rs  error.rs  exit_codes.rs  lib.rs  network.rs  paths.rs  security.rs  server_fn.rs  util.rs
crates/tempo-common/src/account/: mod.rs  query.rs
crates/tempo-common/src/cli/: args.rs  context.rs  exit_code.rs  exit_codes.rs  format.rs  mod.rs  output.rs  runner.rs  runtime.rs  terminal.rs  tracking.rs  verbosity.rs
crates/tempo-common/src/display/: format.rs  mod.rs  terminal.rs
crates/tempo-common/src/error/: config.rs  input.rs  key.rs  mod.rs  network.rs  payment.rs
crates/tempo-common/src/http/: client.rs  fmt.rs  mod.rs  response.rs
crates/tempo-common/src/keys/: authorization.rs  io.rs  keystore.rs  migration.rs  mod.rs  model.rs  ows.rs  secure_enclave.rs  signer.rs  types.rs
crates/tempo-common/src/payment/: charge.rs  classify.rs  dispatch.rs  error.rs  mod.rs  router.rs
crates/tempo-common/src/proof/: mod.rs  verify.rs
crates/tempo-common/src/security/: mod.rs  redact.rs
crates/tempo-mpp/: Cargo.toml  README.md  SKILL.md
crates/tempo-mpp/src/: app.rs  args.rs  dispatch.rs  main.rs
crates/tempo-mpp/src/cli/: args.rs  dispatch.rs  mod.rs  output.rs
crates/tempo-mpp/src/commands/: mod.rs  sign.rs
crates/tempo-mpp/tests/: cli.rs  live.rs  query.rs  structured.rs
crates/tempo-mpp/tests/common/: mod.rs
crates/tempo-request/: Cargo.toml  README.md  SKILL.md
crates/tempo-request/src/: analytics.rs  app.rs  args.rs  dispatch.rs  main.rs
crates/tempo-request/src/cli/: args.rs  dispatch.rs  mod.rs  output.rs
crates/tempo-request/src/commands/: analytics.rs  headers.rs  mod.rs  output.rs  payload.rs  payment_challenge.rs  prepare.rs  query.rs  sse.rs
crates/tempo-request/src/http/: client.rs  fmt.rs  mod.rs  response.rs
crates/tempo-request/src/payment/: challenge.rs  charge.rs  error.rs  lock.rs  mod.rs  proof.rs  router.rs  types.rs
crates/tempo-request/src/query/: analytics.rs  challenge.rs  headers.rs  mod.rs  output.rs  payload.rs  prepare.rs  sse.rs
crates/tempo-request/src/request/: analytics.rs  headers.rs  mod.rs  output.rs  payload.rs  payment_challenge.rs  prepare.rs  sse.rs
crates/tempo-request/tests/: cli.rs  commands.rs  commands_integration.rs  mpp_boundary.rs  query.rs  session_integration.rs  structured.rs
crates/tempo-request/tests/command_tests/: misc.rs
crates/tempo-request/tests/commands/: analytics.rs  basic.rs  errors.rs  mod.rs  payment.rs  streaming.rs
crates/tempo-request/tests/commands_cases/: basic.rs  mod.rs
crates/tempo-request/tests/common/: mod.rs
crates/tempo-request/tests/query/: analytics.rs  errors.rs  misc.rs  mod.rs  parity.rs  payment.rs
crates/tempo-request/tests/session/: harness.rs  lifecycle.rs  mod.rs  spec_alignment.rs  streaming.rs
crates/tempo-request/tests/session_integration/: lifecycle.rs  spec_alignment.rs  streaming.rs
crates/tempo-request/tests/sessions/: harness.rs  lifecycle.rs  mod.rs  streaming.rs
crates/tempo-sign/: Cargo.toml  README.md
crates/tempo-sign/src/: args.rs  error.rs  key.rs  main.rs  manifest.rs  sign.rs
crates/tempo-sign/tests/: commands.rs
crates/tempo-test/: Cargo.toml
crates/tempo-test/src/: assert.rs  command.rs  config.rs  fixture.rs  harness.rs  lib.rs  mock.rs  mock_http.rs  mock_rpc.rs  mock_services.rs  session.rs  wallet.rs
crates/tempo-wallet/: Cargo.toml  README.md  SKILL.md  build.rs
crates/tempo-wallet/src/: analytics.rs  app.rs  args.rs  config.rs  dispatch.rs  error.rs  main.rs  network.rs  prompt.rs
crates/tempo-wallet/src/account/: mod.rs  query.rs  render.rs  types.rs
crates/tempo-wallet/src/cli/: args.rs  context.rs  dispatch.rs  (+3 more)
crates/tempo-wallet/tests/: cards.rs  commands.rs  mpp_cli.rs  remote_flows.rs  split_wallet.rs  structured.rs
lib/: Cargo.toml  README.md
lib/src/: client.rs  config.rs  constants.rs  crypto.rs  currency.rs  error.rs  explorer.rs  http.rs  lib.rs  money.rs  negotiator.rs  network.rs  path_validation.rs  payment_provider.rs  prelude.rs  signer.rs  test_fixtures.rs  types.rs  utils.rs
lib/src/keystore/: cache.rs  encrypt.rs  mod.rs  store.rs
lib/src/middleware/: core.rs  mod.rs  reqwest_mw.rs  tower.rs
lib/src/passkey/: auth_server.rs  browser.rs  config.rs  mod.rs
lib/src/protocol/: mod.rs
lib/src/protocols/: mod.rs
lib/src/providers/: evm.rs  mod.rs  solana.rs
lib/src/web/: encode.rs  mod.rs  parse.rs  types.rs
lib/src/x402/: mod.rs  v1.rs  v2.rs
lib/tests/: client_tests.rs  config_tests.rs  evm_provider_tests.rs  http_client_tests.rs  network_tests.rs  payment_provider_tests.rs  solana_provider_tests.rs  x402_tests.rs
(+621 files in other folders)
