[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
alloy = { version = "1.6", default-features = false, features = ["std", "providers", "provider-http", "reqwest", "signer-local", "sol-types", "contract"] }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1"
dirs = "6.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
minisign-verify = "0.2"
fs2 = "0.4"
futures = "0.3"
getrandom = "0.2"
hex = "0.4"
minisign = "0.8"
hostname = "0.4"
mpp = { git = "https://github.com/tempoxyz/mpp-rs.git", branch = "main", features = ["tempo", "evm", "utils", "client", "server"] }
posthog-rs = "0.4"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
security-framework = "3"
sha2 = "0.10"
tempfile = "3.24"
tempo-primitives = { git = "https://github.com/tempoxyz/tempo.git", features = ["serde"] }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
toon-format = "0.4"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
webbrowser = "1"
zeroize = { version = "1", features = ["serde"] }

# dev-dependencies
assert_cmd = "2.1"
axum = "0.8"
predicates = "3.1"
serial_test = "3.2"

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo" }
