[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.5"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
alloy = { version = "1.6", default-features = false, features = ["std", "providers", "provider-http", "reqwest", "signer-local", "sol-types", "contract"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1"
dirs = "6.0"
minisign-verify = "0.2"
fs2 = "0.4"
futures = "0.3"
getrandom = "0.2"
hex = "0.4"
minisign = "0.8"
hostname = "0.4"
mpp = { git = "https://github.com/tempoxyz/mpp-rs.git", branch = "main", features = ["tempo", "evm", "utils", "client", "server"] }
posthog-rs = "0.4.7"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.24"
tempo-primitives = { git = "https://github.com/tempoxyz/tempo.git", features = ["serde"] }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
toon-format = "0.4"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
webbrowser = "1"
zeroize = { version = "1", features = ["serde"] }

# dev-dependencies
assert_cmd = "2.1"
tempo-test = { path = "crates/tempo-test" }
axum = "0.8"
predicates = "3.1"
serial_test = "3.2"

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo" }
