[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.1"

[workspace.lints]
[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"
default-constructed-unit-structs = "allow"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
alloy = { version = "1.6", default-features = false, features = ["std", "providers", "provider-http", "reqwest", "signer-local", "sol-types", "contract"] }
alloy-rlp = "0.3"
alloy-trie = "0.9"
nybbles = "0.4"
base64 = "0.22"
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
colored = "3.1"
dirs = "6.0"
minisign-verify = "0.2"
fs2 = "0.4"
futures = "0.3"
getrandom = "0.4"
hex = "0.4"
minisign = "0.9"
hostname = "0.4"
mpp = { version = "0.9.3", features = ["tempo", "evm", "utils", "client", "server"] }
posthog-rs = "0.5.0"
qrcode = { version = "0.14", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
tempo-primitives = { git = "https://github.com/tempoxyz/tempo.git", features = ["serde"] }
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "signal"] }
toon-format = "0.4"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
webbrowser = "1"
zeroize = { version = "1", features = ["serde"] }

# dev-dependencies
assert_cmd = "2.2"
tempo-test = { path = "crates/tempo-test" }
axum = "0.8"
predicates = "3.1"
serial_test = "3.2"

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo.git" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo.git" }
