[package]
name = "purl-cli"
version.workspace = true
edition.workspace = true
description = "A curl-like CLI tool for making HTTP requests with automatic payment support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendanjryan/purl"

[[bin]]
name = "purl"
path = "src/main.rs"

[dependencies]
purl = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
base64.workspace = true
tokio.workspace = true
bs58.workspace = true
dialoguer = "0.12"
hex.workspace = true
rand.workspace = true
colored = "3.0"
alloy-signer-local.workspace = true
alloy.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-transport-http = { workspace = true, features = ["reqwest"] }
solana-client.workspace = true
solana-sdk.workspace = true
spl-associated-token-account.workspace = true
dirs.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
serial_test = "3.2"
