[package]
name = "purl-cli"
version.workspace = true
edition.workspace = true
description = "A curl-like CLI tool for making HTTP requests with automatic payment support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendanjryan/purl"

[[bin]]
name = "purl"
path = "src/main.rs"

[dependencies]
# Use purl library with all features
purl = { path = "../lib", features = ["full"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = "0.12"
colored = "3.0"

# Core utilities
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tokio.workspace = true
bs58.workspace = true
hex.workspace = true
rand.workspace = true
dirs.workspace = true

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
serial_test = "3.2"
