[package]
name = "purl"
version.workspace = true
edition.workspace = true
description = "Library for implementing the Web Payment Auth protocol (IETF draft-ietf-httpauth-payment)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendanjryan/purl"

[features]
# Default features include all providers and high-level client
default = ["evm", "solana", "client", "http-client", "keystore"]

# Core protocol types (always available, no dependencies)
web-payment = []

# HTTP client support (using curl)
http-client = ["dep:curl"]

# High-level client API (requires http-client and web-payment)
client = ["http-client", "web-payment"]

# Keystore management for secure key storage
keystore = ["dep:eth-keystore", "dep:zeroize", "dep:rpassword", "dep:dirs"]

# EVM provider support (Ethereum, Base, Polygon, Tempo, etc.)
evm = [
    "dep:alloy",
    "dep:alloy-signer",
    "dep:alloy-signer-local",
    "dep:eth-keystore",
    "dep:tempo-primitives",
    "web-payment",
]

# Solana provider support
solana = [
    "dep:solana-sdk",
    "dep:solana-client",
    "dep:solana-program",
    "dep:solana-commitment-config",
    "dep:solana-compute-budget-interface",
    "dep:spl-token",
    "dep:spl-token-2022",
    "dep:spl-associated-token-account",
    "dep:bincode",
    "web-payment",
]

# Full featured (all functionality)
full = ["evm", "solana", "client", "keystore"]

[dependencies]
# Core dependencies (always required - used by protocol and error types)
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
remain.workspace = true
tokio.workspace = true
async-trait.workspace = true
bs58.workspace = true
hex.workspace = true
base64.workspace = true
regex.workspace = true
toml.workspace = true
rand.workspace = true
once_cell.workspace = true

# Optional dependencies (feature-gated)
curl = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }

alloy = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
eth-keystore = { workspace = true, optional = true }
tempo-primitives = { workspace = true, optional = true }

solana-sdk = { workspace = true, optional = true }
solana-client = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }
solana-commitment-config = { workspace = true, optional = true }
solana-compute-budget-interface = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }
spl-associated-token-account = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.24"
serial_test = "3.2"
