[package]
name = "sign-release"
version = "0.1.0"
edition = "2021"
description = "Generate signed release manifests for Tempo CLI extensions"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "sign-release"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
getrandom = "0.2"
serde_json = "1.0"
sha2 = "0.10"
