[package]
name = "tempo-cli"
version = "0.1.0"
edition = "2021"
description = "Tempo CLI"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://tempo.xyz"
keywords = ["cli", "extension", "tempo"]
categories = ["command-line-utilities"]

[[bin]]
name = "tempo"
path = "src/main.rs"

[dependencies]
dirs.workspace = true
minisign-verify.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
