[package]
name = "tempo-common"
version = "0.1.0"
edition = "2021"
description = "A command-line HTTP client with built-in MPP payment support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempoxyz/cli"
readme = "../../README.md"
keywords = ["http", "cli", "payments", "mpp"]
categories = ["command-line-utilities"]

[dependencies]
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
dirs.workspace = true
fs2.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
hostname.workspace = true
mpp.workspace = true
posthog-rs.workspace = true
qrcode.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tempo-primitives.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toon-format.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
webbrowser.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
axum.workspace = true
serial_test.workspace = true
