[package]
name = "tempo-mpp"
version = "0.1.0"
edition = "2021"
description = "MPP session and service operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempoxyz/cli"
readme = "../../README.md"
keywords = ["http", "cli", "payments", "mpp"]
categories = ["command-line-utilities"]

[[bin]]
name = "tempo-mpp"
path = "src/main.rs"

[dependencies]
tempo-common = { path = "../tempo-common" }
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
mpp.workspace = true
clap_complete.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
predicates.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tempfile.workspace = true
toon-format.workspace = true
