[package]
name = "tempo-request"
version = "0.1.3"
edition = "2021"
description = "Make an HTTP request"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempoxyz/wallet"
publish = false
readme = "../../README.md"
keywords = ["http", "cli", "payments", "mpp"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[[bin]]
name = "tempo-request"
path = "src/main.rs"

[dependencies]
tempo-common = { path = "../tempo-common" }
alloy.workspace = true
base64.workspace = true
clap.workspace = true
futures.workspace = true
fs2.workspace = true
getrandom.workspace = true
hex.workspace = true
mpp.workspace = true
reqwest = { workspace = true, features = ["stream", "multipart"] }
serde.workspace = true
serde_json.workspace = true
tempo-primitives.workspace = true
tokio.workspace = true
toon-format.workspace = true
tracing.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
serial_test.workspace = true
tempfile.workspace = true
tempo-test.workspace = true
toon-format.workspace = true
