[package]
name = "tempo-sign"
version = "0.1.0"
edition = "2021"
description = "Generate signed release manifests for Tempo CLI extensions"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "tempo-sign"
path = "src/main.rs"

[dependencies]
clap.workspace = true
minisign.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
sha2.workspace = true
tempfile.workspace = true
