[package]
name = "tempo-sign"
version.workspace = true
edition = "2021"
description = "Generate signed release manifests for Tempo CLI extensions"
license = "MIT OR Apache-2.0"
publish = false

[lints]
workspace = true

[[bin]]
name = "tempo-sign"
path = "src/main.rs"

[dependencies]
clap.workspace = true
hex.workspace = true
minisign.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
sha2.workspace = true
tempfile.workspace = true
