[package]
name = "tempo-wallet"
version = "0.1.0"
edition = "2021"
description = "Wallet identity and custody extension"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempoxyz/wallet"
readme = "../../README.md"
keywords = ["wallet", "cli", "payments", "mpp"]
categories = ["command-line-utilities"]

[[bin]]
name = "tempo-wallet"
path = "src/main.rs"

[dependencies]
tempo-common = { path = "../tempo-common" }
alloy.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
clap_complete.workspace = true
colored.workspace = true
dirs.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
futures.workspace = true
getrandom.workspace = true
hex.workspace = true
hostname.workspace = true
mpp.workspace = true
posthog-rs.workspace = true
qrcode.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tempo-primitives.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toon-format.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
webbrowser.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
predicates.workspace = true
serde_json.workspace = true
serial_test.workspace = true
